<resources>
    <string name="app_name">Mr Delivery</string>
    <string name="facebook_app_id">145423793536029</string>
    <string name="fb_login_protocol_scheme">fb145423793536029</string>
    <string name="create_account">Create Account</string>
    <string name="password_hint">Password</string>
    <string name="retype_password_hint">Retype Password</string>
    <string name="full_name_hint">Full Name</string>
    <string name="e_mail_hint">E-mail</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="delivery_guy_hint">Delivery Guy</string>
    <string name="login_id">Login</string>
    <string name="e_mail_id">E-mail</string>
    <string name="remember_me_id">Remember Me</string>
    <string name="forgot_password_id">Forgot Password</string>
    <string name="title_activity_customer">Customer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_yummpys">MenuYummpys</string>
    <string name="item">Item</string>
    <string name="price">Price</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset_pw_email">Send password reset Email</string>
    <string name="MAP_KEY">AIzaSyDFX7q7O5_5Vu81lvAIWGbMpVyqfbvQGP0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
